# dotfiles

./: .gitmodules  Justfile  LICENSE.md  README.md  TODO.md  flake.nix  setup.sh
.nix/pkgs/: beeper.nix
ags/: config.js  imports.js  run_dev.sh  setup.sh  utils.js
ags/js/: imports.js  main.js  utils.js
ags/scss/: main.scss
ags/src/: icons.js  main.js  options.js  utils.js
ags/style/: main.scss
arttime/: timer.break
dev/: rust.nix
dunst/: dunstrc
eww/: bar.yuck  eww  eww.scss  eww.yuck  notifications.yuck  variables.yuck
eww/meh/: Cargo.toml  LICENSE  README.md  build.rs
eww/meh/src/: battery.rs  daemon.rs  lib.rs  main.rs  net.rs  notify.rs  volume.rs  wifi.rs
firefox/: user.js
fish/: .bashrc  config.fish  fish  fish_plugins  fish_variables
foot/: foot  foot.ini  kanagawa.ini  yoru
home/: cmd.nix  default.nix  git.nix  xdg.nix
hosts/: com.googlecode.iterm2.plist  disko.nix  mksystem.nix
hypr/: hyprland.conf
iterm/: com.googlecode.iterm2.plist
lf/: lfrc  preview
lib/: default.nix
modules/: default.nix  greetd.nix  wayland.nix
neofetch/: config.conf  neofetch
nix/: flake.nix
nvim/: README.md  init.lua  lazy-lock.json  nvim
pandoc/: pandoc.yml
rofi/: config.rasi  emoji.rasi  rofi
scripts/: transient.zsh
skhd/: launch_warp.sh  skhdrc
sway/: config  environment  libinput-gestures.conf  run  sway
system/: audio.nix  boot.nix  default.nix  desktop.nix  fonts.nix  greetd.nix  impermanence.nix  login.nix  network.nix  nix.nix  sound.nix  steam.nix  wayland.nix
users/: config.nix
wal/: paperd.py  wwal
waybar/: config  style.css
wezterm/: wezterm.lua
yabai/: yabairc
zsh/: .zshrc  rc  starship-transient.toml  starship.toml
(+312 files in other folders)
