[package]
name = "meh"
version = "0.1.0"
edition = "2021"
authors = ["eri <eri@inventati.org>"]
description = "mini eww helper: a tiny utility to get system data to use in eww"

[dependencies]
battery = "0.7.8"
clap = { version = "4.4.7", features = ["derive"] }
daemonize = "0.5.0"
serde = { version = "1.0.190", features = ["derive"] }
sysinfo = "0.29.10"
toml = "0.8.6"
